# social-game-engine

./: .gitignore  CMakeLists.txt  README.md  coinGame.cpp  coinGame.h  test.txt
games/: coin.json  multitest.json  rps.json  testing.json
inputRulesTmpMOVEME/: inputChoiceRule.cpp
lib/: CMakeLists.txt
lib/game/: Audience.cpp  CMakeLists.txt  ContentVariant.cpp  ForEachRule.cpp  Game.cpp  GameController.cpp  GameCreator.cpp  GameModel.cpp  IRule.cpp  LoopRule.cpp  ParallelForRule.cpp  Player.cpp  ShuffleList.cpp  VariantParser.cpp  WhenRule.cpp  coinGame.cpp  coinGame.h  coinInfo.cpp  coinRule.h  main.cpp  readJson.cpp  ruleBuilders.cpp
lib/game/coinGameTest/: CMakeLists.txt  coin.json  coinGame.cpp  coinInfo.h  coinRule.cpp
lib/game/include/: Audience.h  ContentVariant.h  ForEachRule.cpp  ForEachRule.h  Game.h  GameController.h  GameCreator.h  GameModel.h  IRule.h  LoopRule.h  Player.h  ShuffleList.h  VariantParser.h  WhenRule.h
lib/game/rules/: add.cpp
lib/game/rules/include/: add.h
lib/gui/: mainGUI.cpp
lib/gui/include/: mainGUI.h
lib/networking/: CMakeLists.txt
lib/networking/include/: Server.h
lib/networking/src/: CMakeLists.txt  CMakeLists_no.txt  GameRoom.cpp  GameRoom.h  GameRoomId.cpp  GameRoomId.h  Server.cpp  http_server.cpp  server_host.cpp
lib/rules/: CMakeLists.txt  Deal.cpp  Extend.cpp  ForEachRule.cpp  GlobalMessage.cpp  IRule.cpp  InParallel.cpp  LoopRule.cpp  ParallelFor.cpp  ShuffleList.cpp  Sort.cpp  WhenRule.cpp  add.cpp  discard.cpp  inputChoiceRule.cpp  inputRule.cpp  inputTextRule.cpp  inputVoteRule.cpp  reverse.cpp  switch.cpp
lib/rules/arithmeticOperations/: numericalAttributes.cpp  numericalAttributes.h
lib/rules/include/: Deal.h  Extend.h  ForEachRule.h  GlobalMessage.h  IRule.h  InParallel.h  LoopRule.h  ParallelFor.h  ParellelFor.h  ShuffleList.h  Sort.h  WhenRule.h  add.h  discard.h  inputChoiceRule.h  inputRule.h  inputTextRule.h  inputVoteRule.h  reverse.h  switch.h
lib/rules/inputRulesTmpMOVEME/: inputChoiceRule.h  inputTextRule.cpp  inputTextRule.h
lib/rules/output/: scores.cpp  scores.h
list_operations/: reverse.cpp
list_operations/include/: reverse.h
networkBuild2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
networkBuild2/lib/: Makefile  cmake_install.cmake
networkBuild2/lib/networking/: Makefile  cmake_install.cmake
networkBuild2/tools/: Makefile  cmake_install.cmake
networkBuild2/tools/chatclient/: Makefile  cmake_install.cmake
networkBuild2/tools/chatserver/: Makefile  cmake_install.cmake
networkBuild2/tools/flutterclient/: Makefile  cmake_install.cmake
server/: AudienceId.cpp  AudienceId.h  CMakeLists.txt  GUITask.cpp  GUITask.h  GameRoom.cpp  GameRoom.h  GameRoomId.cpp  GameRoomId.h  GameStatus.cpp  GameStatus.h  Id.cpp  Id.h  Message.cpp  Message.h  PlayerId.cpp  PlayerId.h  PlayerInput.cpp  PlayerInput.h  RoundNumber.cpp  RoundNumber.h  http_server.cpp
test/: CMakeLists.txt  ContentVariantTest.cpp  Dummy.cpp  foreach.cpp  gameModelMock.h  inputChoiceRuleTest.cpp  inputTextRuleTest.cpp  loop.cpp
test-MOVEME/: gameModelMock.h  inputChoiceRuleTest.cpp  inputTextRuleTest.cpp
test-MOVEME/gtest/: gtest.h
tools/: CMakeLists.txt
tools/chatserver/: CMakeLists.txt  chatserver.cpp
